--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 />
 <link rel="stylesheet" href="style.css"/>
     <title>Burger-Time</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/bur.png">
 </head>
 <body>
     <header class="header">
